syntax = "proto3";

package temporal.server.api.enums.v1;

option go_package = "go.temporal.io/server/api/enums/v1;enums";

enum ReplicationTaskType {
    REPLICATION_TASK_TYPE_UNSPECIFIED = 0;
    REPLICATION_TASK_TYPE_NAMESPACE_TASK = 1;
    REPLICATION_TASK_TYPE_HISTORY_TASK = 2;
    REPLICATION_TASK_TYPE_SYNC_SHARD_STATUS_TASK = 3;
    REPLICATION_TASK_TYPE_SYNC_ACTIVITY_TASK = 4;
    REPLICATION_TASK_TYPE_HISTORY_METADATA_TASK = 5;
    REPLICATION_TASK_TYPE_HISTORY_V2_TASK = 6;
    REPLICATION_TASK_TYPE_SYNC_WORKFLOW_STATE_TASK = 7;
    REPLICATION_TASK_TYPE_TASK_QUEUE_USER_DATA = 8;
    REPLICATION_TASK_TYPE_SYNC_HSM_TASK = 9;
    REPLICATION_TASK_TYPE_BACKFILL_HISTORY_TASK = 10;
    REPLICATION_TASK_TYPE_VERIFY_VERSIONED_TRANSITION_TASK = 11;
    REPLICATION_TASK_TYPE_SYNC_VERSIONED_TRANSITION_TASK = 12;
}

enum NamespaceOperation {
    NAMESPACE_OPERATION_UNSPECIFIED = 0;
    NAMESPACE_OPERATION_CREATE = 1;
    NAMESPACE_OPERATION_UPDATE = 2;
}

enum ReplicationFlowControlCommand {
    REPLICATION_FLOW_CONTROL_COMMAND_UNSPECIFIED = 0;
    REPLICATION_FLOW_CONTROL_COMMAND_RESUME = 1;
    REPLICATION_FLOW_CONTROL_COMMAND_PAUSE = 2;
}
